--- a/hadoop-docker-x86_64/Dockerfile
+++ b/hadoop-docker-x86_64/Dockerfile
@@ -8,12 +8,16 @@ WORKDIR /root
 RUN apt-get update && apt-get install -y openssh-server 
 
 # install hadoop 2.7.2
-ADD resources/hadoop-2.6.5.tar.gz /usr/local/hadoop
+ADD resources/hadoop-2.7.2.tar.gz /usr/local/hadoop
 ADD resources/jdk-8u121-linux-x64.tar.gz /usr/local/hadoop
+ADD resources/scala-2.12.14.tgz /usr/local/hadoop
+ADD resources/spark-3.2.1-bin-hadoop2.7.tgz /usr/local/hadoop
 
 
 RUN mv /usr/local/hadoop/hadoop-* /usr/local/hadoop/hadoop && \
-    mv /usr/local/hadoop/jdk* /usr/local/hadoop/jdk1.8
+    mv /usr/local/hadoop/jdk* /usr/local/hadoop/jdk1.8 && \
+    mv /usr/local/hadoop/scala* /usr/local/hadoop/scala2.12 && \
+    mv /usr/local/hadoop/spark* /usr/local/hadoop/spark3.2.1
 
 # set environment variable
 ENV JAVA_HOME=/usr/local/hadoop/jdk1.8
@@ -23,6 +27,12 @@ ENV PATH=$PATH:$JAVA_HOME/bin:$JRE_HOME/bin
 
 ENV HADOOP_HOME=/usr/local/hadoop/hadoop
 ENV PATH=$PATH:/usr/local/hadoop/hadoop/bin:/usr/local/hadoop/hadoop/sbin 
+
+ENV SCALA_HOME=/usr/local/hadoop/scala2.12
+ENV PATH=$PATH:$SCALA_HOME/bin:$HADOOP_HOME/sbin 
+
+ENV SPARK_HOME=/usr/local/hadoop/spark3.2.1
+ENV PATH=$PATH:$SPARK_HOME/bin:$HADOOP_HOME/sbin 
 
 # ssh without key
 RUN ssh-keygen -t rsa -f ~/.ssh/id_rsa -P '' && \
